Add another way to configure the needed JVM arguments for JPro Media library in Gradle